@@ -1,3 +1,6 @@
+2008年 02月 20日 星期三 15:45:13 CST lerosua
+	更新TalkFT类到gloox 1.0系列
+	
 2008年 01月 23日 星期三 14:36:48 CST lerosua
 	目前版本要配合gloox 1.0alpha 以上版本编译
 
